# code_diff_doc_gen

./: .clinerules  .cursorrules  .env.example  .gitignore  Makefile  README.md  hello.py  pyproject.toml
cline_docs/: activeContext.md  cli_commands.md  design.md  productContext.md  progress.md  systemPatterns.md  techContext.md
docs/: implementation_plan.md  test_strategy.md
src/code_diff_doc_gen/: __init__.py  cli.py  config.py  diff.py  generator.py  llm.py  main.py  models.py  parser.py  processor.py  state_manager.py  test_import.py  utils.py
tests/: test_diff.py  test_generator.py  test_llm.py  test_processor.py  test_state_manager.py  test_utils.py
