[project]
name = "code-diff-doc-gen"
version = "0.1.0"
dependencies = [
    "loguru>=0.7.3",
    "typer>=0.15.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/code_diff_doc_gen"]

[tool.uv]
dev-dependencies = [
]

[project.scripts]
code-diff-doc-gen = "code_diff_doc_gen.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
