[project]
name = "code_diff_doc_gen"
version = "0.1.0"
description = "Generate and analyze code differences"
authors = [{ name = "Igor Tarasenko" }]
dependencies = [
    "typer>=0.9.0",
    "loguru>=0.7.0",
    "openai>=1.0.0",
    "toml>=0.10.2",
    "aiofiles>=24.1.0",
    "python-dotenv>=1.0.1",
    "aider-chat>=0.19.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "black>=23.7.0"
]

[project.scripts]
code-diff-doc-gen = "code_diff_doc_gen.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.poetry.dependencies]
tomli = "^2.0.1"
tomli-w = "^1.0.0"
